--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,14 @@ filters: &filters
 workflows:
   lint-pack:
     jobs:
-      - orb-tools/lint:
-          filters: *filters
-      - orb-tools/pack:
-          filters: *filters
-      - orb-tools/review:
-          filters: *filters
-      - shellcheck/check:
-          filters: *filters
+#      - orb-tools/lint:
+#          filters: *filters
+#      - orb-tools/pack:
+#          filters: *filters
+#      - orb-tools/review:
+#          filters: *filters
+#      - shellcheck/check:
+#          filters: *filters
       - orb-tools/publish:
           orb-name: <namespace>/<orb-name>
           vcs-type: << pipeline.project.type >>
